# lupus

./: .env  Cargo.toml  mariadb
migrations/2020-07-14-102107_create_users_table/: up.sql
migrations/2020-07-15-175239_create_users/: up.sql
src/: backend.rs  main.rs  models.rs  route.rs  schema.rs  sql.rs
