[package]
name = "lupus"
version = "0.1.0"
authors = ["penta2himajin <penta2himajin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
uuid = "0.8"
chrono = "0.4"
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
